--- a/config.py.sample
+++ b/config.py.sample
@@ -13,6 +13,7 @@ file_save_dir='/cygdrive/f/tempdown/wos/save'
 file_save_batch_size=500
 
 crawl_page_reload_retry=5
+crawl_fail_retry_limit=10
 
 sch=[]
 sch.append({'label':'p1','search_text':
